Change background color when toggling switch

--- a/src/utility/palette.module.css
+++ b/src/utility/palette.module.css
@@ -8,3 +8,5 @@
 .primaryTextColor    { color: #212121; }
 .secondaryTextColor  { color: #757575; }
 .dividerColor         { border-color: #BDBDBD; }
+.backgroundRoman { background: #C5CAE9; }
+.backgroundArabic { background: #757575; }
