--- a/src/utility/palette.module.css
+++ b/src/utility/palette.module.css
@@ -9,4 +9,4 @@
 .secondaryTextColor  { color: #757575; }
 .dividerColor         { border-color: #BDBDBD; }
 .backgroundRoman { background: #C5CAE9; }
-.backgroundArabic { background: #757575; }
+.backgroundArabic { background: #f4f1ee; }
