--- a/src/components/NumberField/NumberField.module.css
+++ b/src/components/NumberField/NumberField.module.css
@@ -1,15 +1,19 @@
 .container {
-    display: flex;
-    align-items: center;
-    margin: 10px 0;
+  display: flex;
+  align-items: center;
+  margin: 10px 0;
 }
 
 .label {
-    margin-right: 20px;
-    font-size: 16px;
-    font-weight: 700;
+  margin-right: 20px;
+  font-size: 16px;
+  font-weight: 700;
 }
 
 .input {
-    height: 40px;
+  height: 40px;
+  border-radius: 20px;
+  padding: 10px;
+  outline: none;
+  border: 1px solid #08457e;
 }
