--- a/src/components/ResetCTA/ResetCTA.module.css
+++ b/src/components/ResetCTA/ResetCTA.module.css
@@ -1,8 +1,9 @@
 .button {
-    padding: 10px;
+    padding: 10px 20px;
     border-radius: 8px;
     border: none;
-    margin: 10px;
+    margin: 30px 10px;
+    outline: none;
 }
 
 .button:hover{
