--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,10 @@
 .app {
+  height: 100vh;
+  overflow: auto;
   text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   align-items: center;
-  height: 100vh;
   background-color: #f4f1ee;
   padding: 20px;
 }
