--- a/src/components/Keyboard/Keyboard.module.css
+++ b/src/components/Keyboard/Keyboard.module.css
@@ -1,5 +1,5 @@
 .container {
-    padding: 20px;
-    border: 1px solid #08457e;
-    border-radius: 50px;
+  padding: 10px 20px;
+  border: 1px solid #08457e;
+  border-radius: 50px;
 }
