--- a/src/components/NumberField/NumberField.module.css
+++ b/src/components/NumberField/NumberField.module.css
@@ -1,13 +1,15 @@
 .container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   margin: 10px 0;
 }
 
 .label {
-  margin-right: 20px;
+  padding: 5px;
   font-size: 16px;
   font-weight: 700;
+  color: #08457e;
 }
 
 .input {
